2011-11-02  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox64a1.h (enum TC_EVACT_enum): Fix typo in enum list.
	Compared to iox128a1.h. Thanks to Francois Costin for the fix.

2011-10-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox (faq_assign_chain): Add paragraph about avoiding
	IO register assignment chains.

2011-10-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox (faq_eeprom_corruption): Remove the remarks about
	the EEPROM being erased pagewise, as they are not true.

2011-09-26  Eric B. Weddington <eric.weddington@atmel.com>

	Partial fix for bug #32945.
	* common/macros.inc (LPM_R0_ZPLUS_* macros): Replace condition of
    BIG_CODE with __AVR_HAVE_ELPM__.

2011-09-26  Eric B. Weddington <eric.weddington@atmel.com>

	Partial fix for bug #33716.
	* include/avr/pgmspace.h: Deprecate typedefs with __progmem__ attribute.
	Document as such.

2011-09-26  Eric B. Weddington <eric.weddington@atmel.com>

	Fix for bug #33858.
	* include/avr/power.h: Add condition for _AVR_ATmega328_.
	* NEWS: Add to fixed bug list.

2011-09-26  Eric B. Weddington <eric.weddington@atmel.com>

	Fix for bug #33920.
	* include/avr/iotn167.h (ICR): Define ICR to be a word register.
	* NEWS: Add to fixed bug list.

2011-09-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (avr_libc_revision, avr_libc_reldate): Bump in
	preparation of an 1.7.2rc.
	* configure.ac (avr_libc_revision_suffix): New macro.

2011-09-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #34047: missing math.h include in delay.h
	* util/delay.h.in: include <math.h>

2011-09-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* util/delay.h.in: Fall back to the historic algorithm when
	compiling within a freestanding environment.

2011-05-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Reported by Heike C. Zimmerer:
	patch #7362: iom16a.h: USART vectors inconsistently named
	for ATmega16A
	* include/avr/iom16a.h: Add backwards-compatible USART
	interrupt vector names.
